# CppShell

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  verify_pipeline.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
docs/: Architecture.md  CommandsContract.md  Requirements.md
include/cppshell/: builtins.hpp  command.hpp  environment.hpp  expander.hpp  grep_command.hpp  parser.hpp  pipe.hpp  tokenizer.hpp
src/cli/: cli.cpp
src/cppshell/: builtins.cpp  builtins.hpp  command.cpp  command.hpp  environment.cpp  environment.hpp  expander.cpp  external_command.cpp  external_command.hpp  grep_command.cpp  parser.cpp  parser.hpp  shell.cpp  shell.hpp  tokenizer.cpp  tokenizer.hpp
tests/: integration_tests.sh  test_builtins.cpp  test_expander.cpp  test_external.cpp  test_grep.cpp  test_helper.cpp  test_parser.cpp  test_tokenizer.cpp
